
Version 1.6.3

* In the topic list screen, it is now possible to selected multiple
  topics and mass update their state, or delete them.

* Improved error message reporting when topics have been deleted and
  they are trying to be viewed, or the state of a topic is attempted
  to be updated when it has already been changed by another user (ie
  the topic is "stale").

Version 1.6.2

* Fixed warnings in checksetup.pl for MySQL databases, where "commits"
  are ignored.

* If there are form elements not properly filled in the "create topic"
  screen, redirect to that page with the error messages displayed,
  with the previous form elements remembered.  The only exception is
  the filename in the file upload input box, since browsers usually
  don't accept pre-defined for security reasons.

* Fixed minor warnings for topic list screen when the cc field is empty.

Version 1.6.1

* Modified to use Net::SMTP to allow Codestriker to run under Windows,
  and to not hardwire the mail sending program to "sendmail".

* Allow for the list/search topics and topic deletion to possibly be
  disabled.  This is required for a codestriker server which is
  handling "anonymous" reviews on a public site.  This option is set
  from the codestriker.conf file.

* Added a "repository" attribute associated with a topic.  This is the
  source code repository associated with the review, and by default is
  set to the value of $default_repository in codestriker.conf.  This
  can be an absolute path, which indicates the CVSROOT of a local cvs
  repository, or a cvsweb or viewcvs URL, followed by a space,
  followed by the CVSROOT.  Other repository types, such as pserver
  CVS, BitKeeper, or Subzero can be added in the future.

  For example, when reviewing a codestriker change, the repository
  would be set as:

  http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi /cvsroot

  For a local repository, it could be just:

  /usr/local/cvsroot
