@@ -45,16 +45,18 @@ $codestriker_css = "";
 $bugtracker = "";
 #$bugtracker = "http://localhost.localdomain/show_bug.cgi?id=";
 
-# Set this to the path of the default repository that code reviews work off.
-# When a topic is created, this value can be overridden.
-$default_repository = "";
-#$default_repository = "http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi /cvsroot";
-#$default_repository = "/home/sits/cvs";
+# Valid repositories which may be selected at the create topic screen.
+# The order shown here is the order presented in the option list.
+@valid_repositories =
+    (
+     "/home/sits/cvs",
+     "http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi /cvsroot"
+    );
 
 # A mapping of repositories to filename viewers.  Examples of such systems
 # would be CVSweb and ViewCVS, for local repositories.  Mappings are
-# required for remote CVSweb and ViewCVS repositories, as they are
-# viewers themselves.  The filename is appended to the end of this URL.
+# not required for remote CVSweb and ViewCVS repositories, as they are
+# viewers themselves.
 $file_viewer =
 {
     "/home/sits/cvs" => "http://localhost/cgi-bin/cvsweb.cgi"
